<resources>
    <string name="app_name">Drewel Driver</string>
    <string name="API_KEY">AIzaSyDbWNBqFpi-wp88j0cPminqVWJ5qEuL3dw</string>
    <string name="orders">Orders</string>
    <string name="completed">Completed</string>
    <string name="earning">Earning</string>
    <string name="more">More</string>
    <string name="pickup_from_vendor">Pick-up from Warehouse</string>
    <string name="placed_on">Placed on:</string>
    <string name="items">Items:</string>
    <string name="status">Status:</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="pickup_address">Pickup Address:</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="order_items">Order Quantity:</string>
    <string name="order_id">Order ID :</string>
    <string name="details">Details</string>
    <string name="delivered">Delivered</string>
    <string name="accept_order">Accept Order</string>
    <string name="decline_order">Decline Order</string>
    <string name="new_order">New Order</string>
    <string name="accepted">Accepted</string>
    <string name="balance">Balance</string>
    <string name="add_money">Add Money</string>
    <string name="add_money_">M301.314,83.298l20.159-29.272c1.197-1.74,0.899-4.024-0.666-5.104c-1.563-1.074-3.805-0.543-4.993,1.199L294.863,80.53c-13.807-5.439-29.139-8.47-45.299-8.47c-16.16,0-31.496,3.028-45.302,8.47l-20.948-30.41c-1.201-1.74-3.439-2.273-5.003-1.199c-1.564,1.077-1.861,3.362-0.664,5.104l20.166,29.272c-32.063,14.916-54.548,43.26-57.413,76.34h218.316C355.861,126.557,333.375,98.214,301.314,83.298
    </string>
    <string name="delete">Delete</string>
    <string name="have_a_promo_code">Have a Promo Code</string>
    <string name="current_earnings">Current Earnings</string>
    <string name="order_date_and_time">Order Date and Time:</string>
    <string name="due_payment">Due Payment</string>
    <string name="notification">Notification</string>
    <string name="wallet">Wallet</string>
    <string name="credit_card">Credit Card</string>
    <string name="faq">FAQ</string>
    <string name="notifications">Notifications</string>
    <string name="change_language">Change language</string>
    <string name="change_password">Change password</string>
    <string name="about_app">About app</string>
    <string name="sign_out">Sign out</string>
    <string name="contact_us">Contact us</string>
    <string name="Press_again_to_exit">Click to exit.</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="login">Login</string>
    <string name="english">English</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="FORGOT_PASSWORD">Forgot Password</string>
    <string name="arabic">عربي</string>
    <string name="active_internet_connection">There is no active internet connection.</string>
    <string name="please_enter_email_id">Please enter email address.</string>
    <string name="please_enter_valid_email">Please enter valid email address.</string>
    <string name="please_enter_password">Please enter password.</string>
    <!--<string name="please_enter_valid_password">Password should be 6 digits long.</string>-->
    <string name="enter_old_password">Enter old password</string>
    <string name="forchange_pass">Password should not match to old password.</string>
    <string name="forconpass">Please enter  confirm password.</string>
    <string name="formatch">Password does not match.</string>
    <string name="please_enter_valid_password">Password must contain atleast one alphabet and numeric character.</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
    <string name="amount">Amount ($)</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="track_order">Track order</string>
    <string name="logout">Logout</string>
    <string name="my_earnings">My Earnings</string>
    <string name="my_account">My Account</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="distance">Distance</string>
    <string name="search">Search...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="please_enter_firstname">Please enter first name.</string>
    <string name="please_enter_lastname">Please enter last name.</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number.</string>
    <string name="order">Order</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="how_it_works">How it works</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_version">App Version</string>
    <string name="choose_prefered_language">Choose your prefered language</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="turn_on">Turn on</string>
    <string name="cancel">Cancel</string>
    <string name="notif_turn_on">Please turn on notification to get notify by Drewel.</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="select_country">Select Country</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="New">NEW</string>
    <string name="out_for_delivery">OUT FOR DELIVERY</string>
    <string name="send">Send</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="ok">OK</string>
    <string name="logout_message">Are you sure, you want to logout?</string>
    <string name="no_record_found">No Record Found</string>
    <string name="omr">OMR</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_notifications">Are you sure you want to delete all notifications?</string>
    <string name="delete_notificaions">Are you sure you want to delete this notification?</string>
    <string name="clear_all">Clear All</string>
    <string name="miles">Miles</string>
    <!--<string name="orders">Orders</string>-->
    <string name="Kg">Kg</string>
    <string name="Gm">Gm</string>
    <string name="Lt">Lt</string>
    <string name="Ml">Ml</string>
    <string name="Cancelled">Cancelled</string>
    <string name="NotCancelled">Not Cancelled</string>
    <string name="Pending">Pending</string>
    <string name="UnderPackaging">Under Packaging</string>
    <string name="ReadyToDeliver">Ready To Deliver</string>
    <string name="COD">Cash On Delivery</string>
    <string name="payment_method_colon">Payment method:</string>


    <string name="default_notification_channel_id">32000</string>
    <string name="default_notification_channel_name">Default Notification Channel</string>
    <string name="default_notification_channel_description">It will deliver all notification above Android Oreo. It should be enabled to receive notification.</string>
    <string name="collect_cash">Please collect cash and confirm.</string>
    <string name="thawani">Thawani</string>
</resources>
