<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:contentInsetStart="0dp"
            tools:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/txt_toolbar"
                style="@style/ToolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:text="@string/change_password" />

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_5sdp"
                android:spinnerMode="dropdown"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/rel_new_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_new"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_oldpassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_newpassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_confirmpassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_save"
                style="@style/Text12OrangeStyleView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/til_add_money"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/accept_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />


        </LinearLayout>
    </RelativeLayout>
    <!-- <TextView
         android:id="@+id/tv_have_promo_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:layout_alignParentEnd="true"
         android:inputType="number"
         android:layout_toRightOf="@+id/til_add_money"
         android:text="@string/have_a_promo_code" />-->

</LinearLayout>