<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            tools:contentInsetStart="0dp"
            tools:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/txt_toolbar"
                style="@style/ToolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:text="@string/my_account" />

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_5sdp"
                android:spinnerMode="dropdown"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp">

        <RelativeLayout
            android:id="@+id/rl_img"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/_15sdp"
            android:gravity="center_horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_userimg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/profile_pic"
                app:civ_border_color="@color/grey"
                app:civ_border_width="@dimen/_1sdp" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/img_edit"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_5sdp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/camera" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rel_new_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_img"
            android:background="@color/white"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_firstname"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/txt_lastname"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/et_email"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email_address"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txt_country_code"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/edit_text_bg"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableRight="@mipmap/phonenumberdropdown"
                    android:hint="+91"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/et_phone"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txt_country"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableRight="@mipmap/phonenumberdropdown"
                android:hint="@string/country"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_zipcode"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/zip_code"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_vehicle_number"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/vehicle_number"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_save"
                style="@style/Text12OrangeStyleView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/til_add_money"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/accept_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv_change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:elevation="@dimen/_3sdp"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_2sdp"
                app:cardElevation="@dimen/_3sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button

                        android:id="@+id/btn_change_password"
                        style="@style/Text12OrangeStyleView"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/change_password"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="@dimen/_11sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/btn_change_password"
                        android:gravity="center"
                        android:rotation="-90"
                        android:src="@mipmap/phonenumberdropdown" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
    <!-- <TextView
         android:id="@+id/tv_have_promo_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:layout_alignParentEnd="true"
         android:inputType="number"
         android:layout_toRightOf="@+id/til_add_money"
         android:text="@string/have_a_promo_code" />-->

</LinearLayout>