<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@mipmap/splash"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            tools:contentInsetStart="0dp"
            tools:popupTheme="@style/AppTheme.AppBarOverlay">

            <TextView
                android:id="@+id/txt_toolbar"
                style="@style/ToolbarTitleStylegray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:text="@string/FORGOT_PASSWORD"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto_regular"
                android:padding="@dimen/_5sdp"
                android:spinnerMode="dropdown"
                android:text="@string/send"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/rel_new_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_100sdp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <ImageView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/txt_email"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:textColor="@color/dark_gray" />

        <Button
            android:id="@+id/btn_save"
            style="@style/Text12OrangeStyleView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/til_add_money"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/login_bg"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>